--- a/angular/src/app/modules/navbar/components/navbar/navbar.component.scss
+++ b/angular/src/app/modules/navbar/components/navbar/navbar.component.scss
@@ -25,3 +25,11 @@ mat-toolbar{
 .color-green{
     color: #33AA33;
 }
+
+mat-icon{
+    margin: 0 !important;
+}
+
+.notification-button{
+    margin-right: 10px;
+}
