--- a/angular/src/app/modules/profile/components/account-auctions/book-card-auctions/book-card-auctions.component.html
+++ b/angular/src/app/modules/profile/components/account-auctions/book-card-auctions/book-card-auctions.component.html
@@ -1,7 +1,7 @@
 <mat-card>
     <div>
         <div class="body">
-            <h4>
+            <h4 (click)="goToBook()">
                 {{purchase.title}}
             </h4>
             <p>ISBN: <code>{{purchase.isbn}}</code></p>
