--- a/angular/src/app/modules/books/components/book-details/book-details.component.html
+++ b/angular/src/app/modules/books/components/book-details/book-details.component.html
@@ -63,18 +63,19 @@
                                 <mat-panel-title>
                                     Chat {{item.key}}
                                 </mat-panel-title>
-                                <mat-panel-description>
-                                </mat-panel-description>
                             </mat-expansion-panel-header>
-                            <app-message *ngFor="let message of item.value.messages" [message]="message"
+                            <div>
+                                <app-message *ngFor="let message of item.value.messages" [message]="message"
                                     [isOwner]="message.sender === book.owner" [isMe]="message.sender === user_uid"
                                     [ngClass]="{'mine': message.sender === user_uid}"></app-message>
+                            </div>
                         </mat-expansion-panel>
-                    </mat-accordion>                   
+                    </mat-accordion>
                 </div>
                 <form class="chat_form" [formGroup]="privateChatForm" (ngSubmit)="onPrivateChatSubmit()">
                     <mat-form-field>
-                        <input class="send_textarea" matInput placeholder="Type a private message" formControlName="message">
+                        <input class="send_textarea" matInput placeholder="Type a private message"
+                            formControlName="message">
                     </mat-form-field>
                     <button mat-raised-button color="primary" type="submit">Send</button>
                 </form>
