a lot of bug fixing, even #15

--- a/angular/src/app/modules/books/components/book-create/book-create.component.html
+++ b/angular/src/app/modules/books/components/book-create/book-create.component.html
@@ -39,11 +39,11 @@
             <div class="row">
                 <mat-form-field>
                     <mat-label>Start Price</mat-label>
-                    <input matInput type="text" formControlName="start_price">
+                    <input matInput type="number" formControlName="start_price">
                 </mat-form-field>
                 <mat-form-field>
                     <mat-label>Reserve Price</mat-label>
-                    <input matInput type="text" formControlName="reserve_price">
+                    <input matInput type="number" formControlName="reserve_price">
                 </mat-form-field>
             </div>
 
