--- a/angular/src/app/modules/books/components/book-create/book-create.component.scss
+++ b/angular/src/app/modules/books/components/book-create/book-create.component.scss
@@ -57,3 +57,23 @@
         }
     }
 }
+
+@media screen and (max-width: 700px) {
+    .container{
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        .card{
+            width: 80%;
+            position: relative;
+            top: 0;
+            left: 0;
+            transform: none;
+            margin-top: 5%;
+        }
+    }
+    
+}
