--- a/angular/src/app/modules/navbar/components/navbar/navbar.component.scss
+++ b/angular/src/app/modules/navbar/components/navbar/navbar.component.scss
@@ -33,3 +33,9 @@ mat-icon{
 .notification-button{
     margin-right: 10px;
 }
+
+@media screen and (max-width: 600px) {
+    img{
+        max-width: 40% !important;
+    }
+}
