--- a/angular/src/app/modules/profile/components/account-auctions/account-auctions.component.scss
+++ b/angular/src/app/modules/profile/components/account-auctions/account-auctions.component.scss
@@ -20,3 +20,13 @@
         cursor: pointer;
     }
 }
+
+@media screen and (max-width: 1000px){
+    .container{
+        margin-left: 0;
+    }
+
+    .add-card{
+        width: 100%;
+    }
+}
