--- a/angular/src/app/modules/profile/components/account-orders/book-card-orders/book-card-orders.component.scss
+++ b/angular/src/app/modules/profile/components/account-orders/book-card-orders/book-card-orders.component.scss
@@ -50,7 +50,13 @@ mat-card{
             }
             color: white;
             font-weight: bold;
-            width: max-content;
+            width: 104%;
         }
+    }
+}
+
+@media screen and (max-width: 1000px){
+    mat-card{
+        width: 100%;
     }
 }
