--- a/angular/src/app/modules/profile/components/account-personal/account-personal.component.scss
+++ b/angular/src/app/modules/profile/components/account-personal/account-personal.component.scss
@@ -39,3 +39,18 @@
     }
 }
 
+@media screen and (max-width: 1000px) {
+    .container {
+        flex-direction: column;
+        margin-left: 0;
+        .info{
+            .row{
+                margin-left: 0;
+                p{
+                    font-size: 100%;
+                }
+            }
+        }
+    }
+    
+}
